--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Good-food-restorenet</title>
+    <!-- font awesome -->
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+    integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+  />
+    <!-- link about css -->
+    <link rel="stylesheet" href="about.css">
     <!-- Google font -->
     <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -217,5 +227,23 @@
         </div>
       </div>
     </section>
+
+    <!-- about section -->
+     <section id="about">
+      <div class="img">
+        <img src="assets/foods.png" alt="food not found">
+      </div>
+      <div class="text">
+        <h1>We always make sure to provide you with good food</h1>
+        <p>Don't miss a thing! Subscribe to our newsletter</p>
+        <h3>Follow Us On</h3>
+        <div id="icon">
+          <i class="fa-brands fa-facebook"></i>
+          <i class="fa-brands fa-x-twitter"></i>
+          <i class="fa-brands fa-instagram"></i>
+          <i class="fa-brands fa-pinterest"></i>
+        </div>
+      </div>
+     </section>
   </body>
 </html>
