--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
     <title>Good-food-restorenet</title>
     <!-- font awesome -->
     <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
-    integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
-    crossorigin="anonymous"
-    referrerpolicy="no-referrer"
-  />
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <!-- link about css -->
-    <link rel="stylesheet" href="about.css">
+    <link rel="stylesheet" href="about.css" />
+    <!-- link social css -->
+     <link rel="stylesheet" href="social.css">
     <!-- Google font -->
     <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -125,13 +127,13 @@
         letter-spacing: 0%;
         text-align: center;
       }
-      .card-container{
+      .card-container {
         margin-top: 30px;
         display: flex;
         justify-content: space-between;
         gap: 20px;
       }
-      .card{
+      .card {
         max-width: 250px;
         display: flex;
         flex-direction: column;
@@ -139,24 +141,25 @@
         justify-content: center;
         align-items: center;
       }
-      .card .img-box{
+      .card .img-box {
         width: 250px;
       }
-      .card .img-box img{
+      .card .img-box img {
         width: 100%;
       }
-      .card .shop{
+      .card .shop {
         padding: 10px 18px 10px 18px;
         border-radius: 8px;
         background: rgba(82, 195, 3, 0.15);
       }
-      #ID{
+      #ID {
         text-align: justify;
       }
     </style>
   </head>
   <body>
     <!-- section>div>p+h1+p+button -->
+    <!-- hero section -->
     <section id="hero">
       <div class="hero-content">
         <p class="subtitle">Savor the Flavors</p>
@@ -171,6 +174,8 @@
         </div>
       </div>
     </section>
+
+    <!-- card section -->
 
     <section id="card-box">
       <div class="container">
@@ -194,7 +199,6 @@
             <button class="btn">Watch all Sell</button>
           </div>
 
-          
           <div class="card">
             <div class="img-box">
               <img src="assets/biriyani.png" alt="lodding pizza" />
@@ -222,16 +226,15 @@
             </p>
             <button class="btn">Watch all Sell</button>
           </div>
-
-
         </div>
       </div>
     </section>
 
     <!-- about section -->
-     <section id="about">
+
+    <section id="about">
       <div class="img">
-        <img src="assets/foods.png" alt="food not found">
+        <img src="assets/foods.png" alt="food not found" />
       </div>
       <div class="text">
         <h1>We always make sure to provide you with good food</h1>
@@ -244,6 +247,21 @@
           <i class="fa-brands fa-pinterest"></i>
         </div>
       </div>
-     </section>
+    </section>
+
+    <!-- Social section -->
+    <section class="Social">
+      <div class="content">
+        <h1>We always make sure to provide you with good food</h1>
+        <p>Don't miss a thing! Subscribe to our newsletter</p>
+        <h3>Follow Us On</h3>
+        <div class="icon">
+          <i class="fa-brands fa-facebook"></i>
+          <i class="fa-brands fa-x-twitter"></i>
+          <i class="fa-brands fa-instagram"></i>
+          <i class="fa-brands fa-pinterest"></i>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
