--- a/index.html
+++ b/index.html
@@ -140,6 +140,10 @@
         gap: 20px;
         justify-content: center;
         align-items: center;
+        border: 1px solid black;
+        border-radius: 8px;
+        padding-bottom:15px ;
+        box-shadow: 1px 1px 8px black;
       }
       .card .img-box {
         width: 250px;
@@ -153,7 +157,7 @@
         background: rgba(82, 195, 3, 0.15);
       }
       #ID {
-        text-align: justify;
+        text-align: center;
       }
     </style>
   </head>
