--- a/index.html
+++ b/index.html
@@ -12,154 +12,12 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <!-- link hero and card css -->
+    <link rel="stylesheet" href="hero_and_card.css">
     <!-- link about css -->
     <link rel="stylesheet" href="about.css" />
     <!-- link social css -->
-     <link rel="stylesheet" href="social.css">
-    <!-- Google font -->
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"> -->
-
-    <style>
-      @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap");
-
-      * {
-        margin: 0;
-        padding: 0;
-        font-family: "Work Sans", serif;
-      }
-      .btn {
-        padding: 14px 18px 14px 18px;
-        color: rgb(255, 255, 255);
-        font-family: Work Sans;
-        font-size: 20px;
-        font-weight: 600;
-        line-height: 15px;
-        letter-spacing: 0%;
-        text-align: center;
-        border-radius: 8px;
-        background: rgb(82, 195, 3);
-        border: none;
-        cursor: pointer;
-      }
-      .btn-container {
-        text-align: center;
-      }
-      #hero {
-        /* background: tomato;
-        background-image: url("assets/hero-bg.png"); */
-        background-repeat: no-repeat;
-        background-size: cover;
-        background: linear-gradient(
-            0deg,
-            rgb(16, 16, 16) -19.5%,
-            rgba(16, 16, 16, 0) 100%
-          ),
-          url("assets/hero-bg.png");
-        /* height: 919px; */
-        height: 615px;
-        background-position: center;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
-      #hero .hero-content {
-        width: 685px;
-        /* margin-left: auto;
-            margin-right: auto; */
-        /* margin: 0 auto; */
-      }
-      #hero .hero-content .subtitle {
-        opacity: 0.8;
-        color: rgb(255, 255, 255);
-        font-family: Work Sans;
-        /* font-size: 32px; */
-        font-size: 20px;
-        font-weight: 600;
-        line-height: 38px;
-        letter-spacing: 0%;
-        text-align: center;
-        margin-bottom: 10px;
-      }
-      #hero .hero-content .title {
-        color: rgb(255, 255, 255);
-        font-family: Work Sans;
-        font-size: 42px;
-        font-weight: 700;
-        line-height: 50px;
-        letter-spacing: 0%;
-        text-align: center;
-        margin-bottom: 14px;
-      }
-      #hero .hero-content .discription {
-        opacity: 0.7;
-        color: rgb(255, 255, 255);
-        font-family: Work Sans;
-        font-size: 12px;
-        font-weight: 500;
-        line-height: 18px;
-        letter-spacing: 0%;
-        text-align: center;
-        margin-bottom: 18px;
-      }
-      /* 5.6 style card box */
-      #card-box {
-        width: 884px;
-        margin: 100px auto;
-      }
-      #card-box .subtitle {
-        opacity: 0.6;
-        color: rgb(16, 16, 16);
-        font-family: Work Sans;
-        font-size: 14px;
-        font-weight: 500;
-        line-height: 18px;
-        letter-spacing: 0%;
-        text-align: center;
-      }
-      #card-box .title {
-        color: rgb(16, 16, 16);
-        font-family: Work Sans;
-        font-size: 28px;
-        font-weight: 700;
-        line-height: 32px;
-        letter-spacing: 0%;
-        text-align: center;
-      }
-      .card-container {
-        margin-top: 30px;
-        display: flex;
-        justify-content: space-between;
-        gap: 20px;
-      }
-      .card {
-        max-width: 250px;
-        display: flex;
-        flex-direction: column;
-        gap: 20px;
-        justify-content: center;
-        align-items: center;
-        border: 1px solid black;
-        border-radius: 8px;
-        padding-bottom:15px ;
-        box-shadow: 1px 1px 8px black;
-      }
-      .card .img-box {
-        width: 250px;
-      }
-      .card .img-box img {
-        width: 100%;
-      }
-      .card .shop {
-        padding: 10px 18px 10px 18px;
-        border-radius: 8px;
-        background: rgba(82, 195, 3, 0.15);
-      }
-      #ID {
-        text-align: center;
-      }
-    </style>
+    <link rel="stylesheet" href="social.css">
   </head>
   <body>
     <!-- section>div>p+h1+p+button -->
